--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,4 +56,4 @@ jobs:
       # Docker Build (senza push)
       - name: Build Docker images
         run: |
-          docker-compose build
+          docker compose build
